--- a/distr/theme/Renovation/assets/css/reset.css
+++ b/distr/theme/Renovation/assets/css/reset.css
@@ -92,7 +92,10 @@ body, select, input, textarea {
 
 /* headers (h1,h2,etc) have no default font-size or margin,
    you'll want to define those yourself. */
-h1,h2,h3,h4,h5,h6 { font-weight: bold; }
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bold;
+	line-height: normal;
+}
 
 /* always force a scrollbar in non-IE: */
 html { overflow-y: scroll; }
